update axios services
