# backend/src/routes/UserRoutes.ts
@@ -1,6 +1,7 @@
 import express from 'express';
 import {
   getAllUsers,
+  getUser,
   signUp,
   logIn,
   verifyEmail,
@@ -12,6 +13,7 @@ import { authenticateToken } from '../utils/authenticate';
 const router = express.Router();
 
 router.get('/users', authenticateToken, getAllUsers);
+router.get('/user', authenticateToken, getUser);
 router.post('/signup', signUp);
 router.post('/login', logIn);
 router.put('/verfiy-email', authenticateToken, verifyEmail);
